force-app/main/default/objects/Lifecycle_History__c/Lifecycle_History__c.object-meta.xml
<CustomObject>
    <description>This object is used to track status history for an object such as Case to report on trends on the lifecycle of the case data</description>
    <label>Lifecycle History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lifecycle History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>