force-app/main/default/objects/Lifecycle_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Lifecycle History</relationshipLabel>
    <relationshipName>Case_Lifecycle_History</relationshipName>
    <type>Lookup</type>
</CustomField>