force-app/main/default/objects/Lifecycle_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Current Owner</fullName>
            </value>
            <value>
                <fullName>Incident Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>